# ViteKnight

./: CMakeLists.txt  README.md  main.cpp
Role/: CMakeLists.txt  Role.h  Stencil.cpp
